@@ -1,5 +1,14 @@
 2003-11-17  Maciej Stachowiak  <mjs@apple.com>
 
+        Patch from Harri, reviewed by me.
+
+	- fixed 3487375 - backwards array slice causes infinite loop
+        
+	* kjs/array_object.cpp:
+        (ArrayProtoFuncImp::call):
+
+2003-11-17  Maciej Stachowiak  <mjs@apple.com>
+
         Patch from Harri Porten reviewed by me.
 
 	- fixed 3487371 - operator precedence for bitwise or, xor and and is wrong
